# defaultcourt

./: .gitignore  LICENSE  README.md  eslint.config.mjs  next.config.ts  open-next.config.ts  package-lock.json  package.json  playwright.config.ts  wrangler.jsonc
contracts/default_court/: Cargo.toml  lib.rs
docs/: ARCHITECTURE.md  DEPLOYMENT.md
scripts/: check-portaldot-status.ts  portaldot_deploy_contract.py  reset-cases.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/about/: page.tsx
src/app/api/cases/: route.ts
src/app/api/cases/[id]/: route.ts
src/app/api/cases/[id]/event/: route.ts
src/app/api/portaldot/contract/metadata/: route.ts
src/app/api/portaldot/contract/resolve/: route.ts
src/app/api/portaldot/contract/status/: route.ts
src/app/api/portaldot/status/: route.ts
src/app/app/: page.tsx
src/app/app/cases/[id]/: page.tsx
src/app/app/contract/: page.tsx
src/app/app/guardians/: page.tsx
src/components/: case-room.tsx  chain-status.tsx  nav.tsx  portaldot-wallet-contract.tsx  status-chip.tsx
src/lib/: cases.ts  format.ts  portaldot-contract.ts  portaldot.ts  types.ts
tests/: defaultcourt.spec.ts
