[package]
name = "default_court"
version = "0.1.0"
authors = ["DefaultCourt contributors"]
edition = "2021"
publish = false

[dependencies]
ink = { version = "5.1.1", default-features = false }
scale = { package = "parity-scale-codec", version = "3.7.5", default-features = false, features = ["derive"] }
scale-info = { version = "2.11.6", default-features = false, features = ["derive"], optional = true }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
  "ink/std",
  "scale/std",
  "scale-info/std"
]
ink-as-dependency = []

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
codegen-units = 1
overflow-checks = false
